CHATS_SIT/force-app/main/default/objects/sfsit_t_indiv_ddtn_hist__x.object
<CustomObject>
    <description>sfsit$t_indiv_ddtn_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_indiv_ddtn_hist</externalName>
    <fields>
        <fullName>amt_ddtn_total__c</fullName>
        <description>amt_ddtn_total</description>
        <externalDeveloperName>amt_ddtn_total</externalDeveloperName>
        <label>Amount Paid</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_freq_paid__c</fullName>
        <description>cde_freq_paid</description>
        <externalDeveloperName>cde_freq_paid</externalDeveloperName>
        <label>How often is the amount paid?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_ownrshp__c</fullName>
        <description>cde_ownrshp</description>
        <externalDeveloperName>cde_ownrshp</externalDeveloperName>
        <label>Ownership code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_source_vrfyd_docket__c</fullName>
        <description>cde_source_vrfyd_docket</description>
        <externalDeveloperName>cde_source_vrfyd_docket</externalDeveloperName>
        <label>Docket How Verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_source_vrfyd_dtdn__c</fullName>
        <description>cde_source_vrfyd_dtdn</description>
        <externalDeveloperName>cde_source_vrfyd_dtdn</externalDeveloperName>
        <label>Deduction How Verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_ddtn__c</fullName>
        <description>cde_type_ddtn</description>
        <externalDeveloperName>cde_type_ddtn</externalDeveloperName>
        <label>Deduction Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_verif__c</fullName>
        <description>cde_type_verif</description>
        <externalDeveloperName>cde_type_verif</externalDeveloperName>
        <label>Deduction Verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_vrfyd_docket__c</fullName>
        <description>cde_vrfyd_docket</description>
        <externalDeveloperName>cde_vrfyd_docket</externalDeveloperName>
        <label>Docket Verified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effetive End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_rptd_change__c</fullName>
        <description>dte_rptd_change</description>
        <externalDeveloperName>dte_rptd_change</externalDeveloperName>
        <label>Change Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_verif__c</fullName>
        <description>dte_verif</description>
        <externalDeveloperName>dte_verif</externalDeveloperName>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case_vrfyng__c</fullName>
        <description>idn_case_vrfyng</description>
        <externalDeveloperName>idn_case_vrfyng</externalDeveloperName>
        <label>Case Verification ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Client ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_ddtn_indiv__c</fullName>
        <description>idn_ddtn_indiv</description>
        <externalDeveloperName>idn_ddtn_indiv</externalDeveloperName>
        <label>Deduction ID</label>
        <length>50</length>
        <referenceTargetField>T_INDIV_DDTN__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_INDIV_DDTN__c</referenceTo>
        <relationshipLabel>Child Support Deduction Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_indiv_ddtn_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_ddtn_indiv_hist__c</fullName>
        <description>idn_ddtn_indiv_hist</description>
        <externalDeveloperName>idn_ddtn_indiv_hist</externalDeveloperName>
        <label>Deduction ID History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_indiv_ddtn_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>idn_user_vrfyng__c</fullName>
        <description>idn_user_vrfyng</description>
        <externalDeveloperName>idn_user_vrfyng</externalDeveloperName>
        <label>User Verification ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>Current Record Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nam_payee__c</fullName>
        <description>nam_payee</description>
        <externalDeveloperName>nam_payee</externalDeveloperName>
        <label>Payee Name</label>
        <length>71</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nam_rcvc__c</fullName>
        <description>nam_rcvc</description>
        <externalDeveloperName>nam_rcvc</externalDeveloperName>
        <label>Receiver&apos;s Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_docket__c</fullName>
        <description>nbr_docket</description>
        <externalDeveloperName>nbr_docket</externalDeveloperName>
        <label>Docket/Court Case #</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_ddtn_indiv__c</fullName>
        <description>nbr_seq_ddtn_indiv</description>
        <externalDeveloperName>nbr_seq_ddtn_indiv</externalDeveloperName>
        <label>Individual Deduction Number Sequence</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Child Support Deduction History</label>
    <pluralLabel>Child Support Deduction History</pluralLabel>
</CustomObject>